<?xml version="1.0" encoding="utf-8" standalone="no"?>
<!--
  ~ Catroid: An on-device visual programming system for Android devices
  ~ Copyright (C) 2010-2026 The Catrobat Team
  ~ (<http://developer.catrobat.org/credits>)
  ~
  ~ This program is free software: you can redistribute it and/or modify
...
    <string formatted="false" name="ok">OK</string>
    <string formatted="false" name="done">Done</string>
    <string formatted="false" name="close">Close</string>

    <string formatted="false" name= "assistant">Assistant</string>

    <string formatted="false" name="yes">Yes</string>
    <string formatted="false" name="no">No</string>

    <string formatted="false" name="once">Once</string>
    <string formatted="false" name="always">Always</string>
    <string formatted="false" name="deny">Deny</string>
    <string formatted="false" name="do_not_show_again">DO NOT SHOW AGAIN</string>
...
    <string formatted="false" name="loading_google_exchange_code">Exchanging Google login data…</string>
    <string formatted="false" name="loading_google_login">Google login on our server is complete…</string>

    <string formatted="false" name="logout_successful">Logout successful</string>

    <string formatted="false" name="degrees">degrees</string>
    <string formatted="false" name="background">Background</string>
    <string formatted="false" name="landscape">landscape</string>
    <string formatted="false" name="portrait">portrait</string>
    <string formatted="false" name="unknown">unknown</string>
    <string formatted="false" name="disconnect">Disconnect</string>
    <!--  -->

...
    <string formatted="false" name="wtf_error">An unexpected error occurred: I could not restore the sample project.</string>

    <!-- Project Handling Errors -->
    <string formatted="false" name="error_copy_project">An error occurred while copying project</string>

    <!-- Dialog Errors -->
    <string formatted="false" name="name_already_exists">This name is already in use, please choose another one.</string>
    <string formatted="false" name="name_consists_of_spaces_only">You only put spaces into the text field, please enter a text
        using letters, numbers or other special characters.</string>
    <string formatted="false" name="name_empty">Please enter a text</string>

    <!-- Recycler View -->
    <string formatted="false" name="am_empty_list">There are no items in this list yet. Please add some first.</string>
...
    <string formatted="false" name="am_unpack">Unpack</string>
    <string formatted="false" name="am_copy">Copy</string>
    <string formatted="false" name="am_delete">Delete</string>
    <string formatted="false" name="am_rename">Rename</string>
    <string formatted="false" name="am_convert">Convert</string>
    <string formatted="false" name="am_merge">Merge</string>
    <string formatted="false" name="dialog_confirm_delete">You can\'t undo this!</string>

    <string formatted="false" name="list_headline_sprites">Actors and objects</string>

    <!-- Options Menu Options -->
    <string formatted="false" name="backpack">Backpack</string>
    <string formatted="false" name="copy">Copy</string>
    <string formatted="false" name="delete">Delete</string>
    <string formatted="false" name="rename">Rename</string>
    <string formatted="false" name="merge">Merge</string>
    <string formatted="false" name="show_details">Show details</string>
    <string formatted="false" name="hide_details">Hide details</string>
    <string formatted="false" name="project_options">Project options</string>
    <string formatted="false" name="from_local">Add from local</string>
    <string formatted="false" name="sort_projects">Sort</string>
    <string formatted="false" name="unsort_projects">Unsort</string>
    <string formatted="false" name= "import_from_project">Select project to import from</string>

    <!-- New Dialog Titles -->
...
    <string formatted="false" name="no_projects_selected">No projects selected for import</string>
    <string formatted="false" name="only_select_catrobat_files">Only select project files</string>
    <string formatted="false" name="error_no_files_found">No project files found.</string>
    <string formatted="false" name="import_sprite_from_project_launcher">Import Object from Local Project</string>

    <!-- ProjectOptionsFragment -->
    <string formatted="false" name="project_options_description">Description</string>
    <string formatted="false" name="project_options_notes_and_credits">Notes and credits</string>
    <string formatted="false" name="project_options_tags">Tags</string>
    <string formatted="false" name="project_options_aspect_ratio">Keep original aspect ratio</string>
    <string formatted="false" name="project_options_more_details">Project Properties</string>
    <string formatted="false" name="project_options_delete_project">Delete project</string>

    <!-- ScriptListFragment -->
    <string formatted="false" name="fragment_script_text_description">Tap \"+\" to add scripts</string>
    <!--  -->

...
    <string formatted="false" name="fragment_sprite_text_description">Tap \"+\" to add actors or objects</string>
    <string formatted="false" name="default_sprite_name">My actor or object</string>
    <!--  -->

    <!-- LookListFragment -->
    <string formatted="false" name="fragment_look_text_description">Tap \"+\" to add looks</string>
    <string formatted="false" name="select_look_from_gallery">Select image</string>
    <string formatted="false" name="select_look_from_camera">Select photo</string>
    <!--  -->

    <!-- SoundListFragment -->
    <string formatted="false" name="fragment_sound_text_description">Tap \"+\" to add sounds</string>
    <string formatted="false" name="sound_select_source">Select a sound</string>
...
    <string formatted="false" name="upload_tag_dialog_title">Please choose up to three categories</string>
    <string formatted="false" name="upload_tags_maximum_error">Selecting more than 3 tags is not possible.</string>

    <!-- Save Project to External Storage -->
    <string formatted="false" name="save_to_external_storage_button">Export project</string>
    <string formatted="false" name="notification_save_project_to_external_storage_title_pending">" "</string>
    <string formatted="false" name="notification_save_project_to_external_storage_pending">Saving project to external storage.</string>
    <string formatted="false" name="notification_save_project_to_external_storage_title_open">" "</string>
    <string formatted="false" name="notification_save_project_to_external_storage_open">"Saved project to %1$s"</string>
    <string formatted="false" name="save_project_to_external_storage_io_exception_message">Failed to save project, not enough memory is available!</string>
    <!--  -->

    <!-- SoundRecorderActivity -->
...
